tests/ui/modules/path-no-file-name.stderr
error: couldn't read `$DIR/.`: $ACCESS_DENIED_MSG (os error $ACCESS_DENIED_CODE)
  --> $DIR/path-no-file-name.rs:5:1
   |
LL | mod m;
   | ^^^^^^

error: aborting due to 1 previous error

